overflow fix on form

--- a/src/Pages/Css/services.module.css
+++ b/src/Pages/Css/services.module.css
@@ -42,6 +42,7 @@
 .form-wrap {
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .sent {
